Fix bug phần client

--- a/index.html
+++ b/index.html
@@ -86,11 +86,21 @@
             <p>5 Star Ratings (2k+ Review)</p>
           </div>
           <div class="images">
-            <img src="./assets/img/logo-1.svg" alt="Logo" />
-            <img src="./assets/img/logo-2.svg" alt="Logo" />
-            <img src="./assets/img/logo-3.svg" alt="Logo" />
-            <img src="./assets/img/logo-4.svg" alt="Logo" />
-            <img src="./assets/img/logo-5.svg" alt="Logo" />
+            <a href="">
+              <img src="./assets/img/logo-1.svg" alt="Logo" />
+            </a>
+            <a href="">
+              <img src="./assets/img/logo-2.svg" alt="Logo" />
+            </a>
+            <a href="">
+              <img src="./assets/img/logo-3.svg" alt="Logo" />
+            </a>
+            <a href="">
+              <img src="./assets/img/logo-4.svg" alt="Logo" />
+            </a>
+            <a href="">
+              <img src="./assets/img/logo-5.svg" alt="Logo" />
+            </a>
           </div>
         </div>
       </div>
