--- a/index.html
+++ b/index.html
@@ -19,28 +19,29 @@
   </head>
   <body>
     <main>
-      <!-------------- header ------->
-      <header class="header">
+       <!-- navbar -->
+       <header class="fixed-header">
+         <nav class="navbar">
+           <!-- Logo -->
+           <img src="./assets/img/Logo.svg" alt="Bensnik" />
+           <!-- Navigation -->
+           <ul>
+             <li><a href="#!">Home</a></li>
+             <li><a href="#!">Features</a></li>
+             <li><a href="#!">Services</a></li>
+             <li><a href="#!">Resources</a></li>
+             <li><a href="#!">Contact</a></li>
+           </ul>
+           <!-- Action -->
+           <div class="actions">
+             <a href="#!" class="action-link">Sign in</a>
+             <a href="#!" class="btn action-btn">Sign up</a>
+           </div>
+         </nav>
+       </header>
+      <!-------------- hero-wrap ------->
+      <div class="hero-wrap">
         <div class="content">
-          <!-- navbar -->
-          <nav class="navbar">
-            <!-- Logo -->
-            <img src="./assets/img/Logo.svg" alt="Bensnik" />
-
-            <!-- Navigation -->
-            <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
-            </ul>
-            <!-- Action -->
-            <div class="actions">
-              <a href="#!" class="action-link">Sign in</a>
-              <a href="#!" class="btn action-btn">Sign up</a>
-            </div>
-          </nav>
           <div class="super">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
@@ -59,7 +60,7 @@
             />
           </div>
         </div>
-      </header>
+      </div>
       <!-------------- Clients -------->
       <div class="clients">
         <div class="content">
