--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
        <header class="fixed-header">
          <nav class="navbar">
            <!-- Logo -->
-           <img src="./assets/img/Logo.svg" alt="Bensnik" />
+           <a href="#home">
+             <img src="./assets/img/Logo.svg" alt="Bensnik" />
+           </a>
            <!-- Navigation -->
            <ul>
-             <li><a href="#!">Home</a></li>
-             <li><a href="#!">Features</a></li>
-             <li><a href="#!">Services</a></li>
-             <li><a href="#!">Resources</a></li>
-             <li><a href="#!">Contact</a></li>
+             <li><a href="#home">Home</a></li>
+             <li><a href="#services">Services</a></li>
+             <li><a href="#features">Features</a></li>
+             <li><a href="#resources">Resources</a></li>
+             <li><a href="#contact">Contact</a></li>
            </ul>
            <!-- Action -->
            <div class="actions">
@@ -40,7 +42,7 @@
          </nav>
        </header>
       <!-------------- hero-wrap ------->
-      <div class="hero-wrap">
+      <div id="home" class="hero-wrap">
         <div class="content">
           <div class="super">
             <div class="info">
@@ -74,7 +76,7 @@
               />
             </figure>
             <!-- stars -->
-            <div class="stars">
+            <div id="services" class="stars">
               <img src="./assets/img/starts.svg" alt="stars" />
               <img src="./assets/img/starts.svg" alt="stars" />
               <img src="./assets/img/starts.svg" alt="stars" />
@@ -174,7 +176,7 @@
         </div>
       </div>
       <!--------------- Featured ------>
-      <div class="featured">
+      <div id="features"  class="featured">
         <div class="content">
           <header>
             <h2 class="sub-title">Featured Properties</h2>
@@ -300,7 +302,7 @@
         </div>
       </div>
       <!----------- Stats ------>
-      <div class="stats">
+      <div id="resources" class="stats">
         <div class="content" style="width: 101.7rem">
           <div class="row">
             <div class="img-block">
@@ -446,7 +448,7 @@
         </div>
       </div>
       <!------------- Subcription --------------->
-      <div class="subcription">
+      <div id="contact" class="subcription">
         <div class="content">
           <div class="body">
             <div class="info">
