--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
        <header class="fixed-header">
          <nav class="navbar">
            <!-- Logo -->
-           <a href="#home">
+           <a href="#">
              <img src="./assets/img/Logo.svg" alt="Bensnik" />
            </a>
            <!-- Navigation -->
            <ul>
-             <li><a href="#home">Home</a></li>
+             <li><a href="#">Home</a></li>
              <li><a href="#services">Services</a></li>
              <li><a href="#features">Features</a></li>
              <li><a href="#resources">Resources</a></li>
@@ -42,9 +42,8 @@
          </nav>
        </header>
       <!-------------- hero-wrap ------->
-      <div id="home" class="hero-wrap">
+      <div class="hero-wrap">
         <div class="content">
-          <div class="super">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
               <h1 class="title">Discover a place you'll love to live.</h1>
@@ -60,7 +59,6 @@
               alt="Discover a place you'll love to live."
               class="hero-img"
             />
-          </div>
         </div>
       </div>
       <!-------------- Clients -------->
