--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
            </ul>
            <!-- Action -->
            <div class="actions">
-             <a href="#!" class="action-link">Sign in</a>
-             <a href="#!" class="btn action-btn">Sign up</a>
+             <a href="login.html" class="action-link">Sign in</a>
+             <a href="login.html" class="btn action-btn">Sign up</a>
            </div>
          </nav>
        </header>
