--- a/index.html
+++ b/index.html
@@ -463,6 +463,10 @@
         </div>
       </div>
 
+      <div class="content">
+        <div class="space"></div>
+      </div>
+
       <!------------- Footer --------------->
       <footer class="footer">
         <div class="content">
