--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phankao-01</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/Logo.svg">
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/reset.css" />
 
