creat login and all prod

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="desc">
                 <p>Everything you need to know when you're looking</p>
               </div>
-              <a href="#!" class="link">
+              <a href="All-Properties.html" class="link">
                 <span>View All Properties</span>
                 <img src="./assets/img/guide-img.png" alt="" class="arrow" />
               </a>
