create footer all prod

--- a/All-Properties.html
+++ b/All-Properties.html
@@ -954,6 +954,26 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="main-content">
+          <div class="support">
+            <div class="block-right">
+              <a href="#!" class="desc">© 2023 Airbnb, Inc.</a> 
+              <div class="docs">.</div>
+              <a href="#!" class="desc">Terms</a> 
+              <div class="docs">.</div>
+              <a href="#!" class="desc">Sitemap</a> 
+              <div class="docs">.</div>
+              <a href="#!" class="desc">Privacy</a> 
+              <div class="docs">.</div>
+              <a href="#!" class="desc">Your Privacy Choices</a>
+              <div class="docs">.</div>
+              <a href="#!" class="desc">Destinations</a>
+            </div>
+            <div class="block-left"></div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
