create footer all prod

--- a/All-Properties.html
+++ b/All-Properties.html
@@ -954,25 +954,36 @@
           </div>
         </div>
       </div>
-      <footer>
-        <div class="main-content">
+      <footer>        
           <div class="support">
             <div class="block-right">
               <a href="#!" class="desc">© 2023 Airbnb, Inc.</a> 
-              <div class="docs">.</div>
+              <div class="docs">·</div>
               <a href="#!" class="desc">Terms</a> 
-              <div class="docs">.</div>
+              <div class="docs">·</div>
               <a href="#!" class="desc">Sitemap</a> 
-              <div class="docs">.</div>
+              <div class="docs">·</div>
               <a href="#!" class="desc">Privacy</a> 
-              <div class="docs">.</div>
+              <div class="docs">·</div>
               <a href="#!" class="desc">Your Privacy Choices</a>
-              <div class="docs">.</div>
+              <div class="docs">·</div>
               <a href="#!" class="desc">Destinations</a>
             </div>
-            <div class="block-left"></div>
-          </div>
-        </div>
+            <div class="block-left">
+              <div class="item">
+                <i class="fa-solid fa-globe"></i>
+                <span class="desc">English (US)</span>
+              </div>
+              <div class="item">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <span class="desc">USA</span>
+              </div>
+              <div class="item">
+                <span class="desc">Support and resources</span>
+                <i class="fa-solid fa-chevron-up"></i>
+              </div>
+            </div>
+          </div>    
       </footer>
     </main>
   </body>
