--- a/index.html
+++ b/index.html
@@ -193,12 +193,48 @@
             <!----- Featured-1 ----->
             <div class="item">
               <a href="#!"
-                ><img src="./assets/img/villa-1.jpg" alt="" class="thumb"
+                ><img src="./assets/img/villa-4.webp" alt="" class="thumb"
               /></a>
               <div class="body">
-                <h3 class="title line-clamp"><a href="#!">Villa Texas</a></h3>
+                <h3 class="title line-clamp"><a href="#!">Villa Leelawadee - With Phang Nga Bay View</a></h3>
                 <p class="desc line-clamp">
-                  194 Mercer's Street, 627 Broadway, New York
+                Chang Wat Phuket, Thailand
+                </p>
+                <div class="info">
+                  <img
+                    src="./assets/img/featured-icon1.png"
+                    alt=""
+                    class="icon"
+                  />
+                  <span class="lable">7 Beds</span>
+
+                  <img
+                    src="./assets/img/featured-icon2.png"
+                    alt=""
+                    class="icon"
+                  />
+                  <span class="lable">14 both</span>
+
+                  <img
+                    src="./assets/img/featured-icon3.png"
+                    alt=""
+                    class="icon"
+                  />
+                  <span class="lable">2000 Sqft</span>
+                </div>
+              </div>
+            </div>
+            <!----- Featured-2 ----->
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/villa-2.webp" alt="" class="thumb"
+              /></a>
+              <div class="body">
+                <h3 class="title line-clamp">
+                  <a href="#!">DAYDREAM VILLA seaview/private pool/walk to beach</a>
+                </h3>
+                <p class="desc line-clamp">
+                  Koh Samui, Choeng Mon, ThaiLand
                 </p>
                 <div class="info">
                   <img
@@ -213,44 +249,7 @@
                     alt=""
                     class="icon"
                   />
-                  <span class="lable">4 both</span>
-
-                  <img
-                    src="./assets/img/featured-icon3.png"
-                    alt=""
-                    class="icon"
-                  />
-                  <span class="lable">2000 Sqft</span>
-                </div>
-              </div>
-            </div>
-            <!----- Featured-2 ----->
-            <div class="item">
-              <a href="#!"
-                ><img src="./assets/img/villag-2.jpg" alt="" class="thumb"
-              /></a>
-              <div class="body">
-                <h3 class="title line-clamp">
-                  <a href="#!">Luxury Villa In Rego Park</a>
-                </h3>
-                <p class="desc line-clamp">
-                  Hanuman Street, National Highway 44, Chegunta, Telangana,
-                  India
-                </p>
-                <div class="info">
-                  <img
-                    src="./assets/img/featured-icon1.png"
-                    alt=""
-                    class="icon"
-                  />
-                  <span class="lable">3 Beds</span>
-
-                  <img
-                    src="./assets/img/featured-icon2.png"
-                    alt=""
-                    class="icon"
-                  />
-                  <span class="lable">4 both</span>
+                  <span class="lable">8 both</span>
 
                   <img
                     src="./assets/img/featured-icon3.png"
@@ -264,11 +263,11 @@
             <!----- Featured-3 ----->
             <div class="item">
               <a href="#!"
-                ><img src="./assets/img/villa-3.jpg" alt="" class="thumb"
+                ><img src="./assets/img/villa-3.webp" alt="" class="thumb"
               /></a>
               <div class="body">
                 <h3 class="title line-clamp">
-                  <a href="">Villa in Coral Gables</a>
+                  <a href="">SHBHALA, Heritage Villa</a>
                 </h3>
                 <p class="desc line-clamp">
                   Ocean Hawaii, Kalakaua Avenue, Honolulu, HI, USA
@@ -279,14 +278,14 @@
                     alt=""
                     class="icon"
                   />
-                  <span class="lable">3 Beds</span>
+                  <span class="lable">4 Beds</span>
 
                   <img
                     src="./assets/img/featured-icon2.png"
                     alt=""
                     class="icon"
                   />
-                  <span class="lable">3 both</span>
+                  <span class="lable">8 both</span>
 
                   <img
                     src="./assets/img/featured-icon3.png"
