--- a/All-Properties.html
+++ b/All-Properties.html
@@ -9,6 +9,8 @@
       crossorigin="anonymous"
     ></script>
 
+    <link rel="icon" type="image/x-icon" href="./assets/img/Logo.svg">
+
     <!-- Reset Css -->
     <link rel="stylesheet" href="./assets/reset.css" />
 
@@ -22,7 +24,7 @@
     <link rel="stylesheet" href="./assets/font/stylesheet.css" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/style2.css" />
+    <link rel="stylesheet" href="./assets/all-prod.css" />
     <title>All Properties</title>
   </head>
   <body>
