creat booking form

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="list">
             <!----- Featured-1 ----->
             <div class="item">
-              <a href="#!"
+              <a href="./villa1.html"
                 ><img src="./assets/img/villa-4.webp" alt="" class="thumb"
               /></a>
               <div class="body">
