--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 market! HOT FORECLOSURE DEALS with one simple search
               </p>
               <!-- call to more -->
-              <a href="#!" class="btn hero-cta">More About Us</a>
+              <a href="All-Properties.html" class="btn hero-cta">View all Properties</a>
             </div>
             <img
               src="./assets/img/house illustration.svg"
